Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42038

[Reg 5.3->5.4] Windows Phone ARM crashes in release mode when loading an image

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.4.0
    • 5.4.0 Beta
    • GUI: Painting
    • Windows Phone 8.1 ARM
    • WinRT
    • 9b01589e58d458b6367b3578079e73ddc2ef458f

      When calling into the inline image copy/translation functions, the application crashes in release mode. Perhaps this is caused by a miscompile.

      It might also be fixed by using a different codepath. The NEON-enhanced versions are not used but perhaps could be.

      One workaround is to build Qt with optimizations disabled. In mkspecs/common/winrt_winphone/qmake.conf, change -O2 to -Od.
      Another "workaround" is to not load images.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bjoern.breitmeyer Björn Breitmeyer
            andrew.knight Andrew Knight
            Votes:
            2 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes